tests/error/tested.default
build:
run: ./build/$BUILD/bin/rodac % --messages=minimal
cleanup: 

exit: != 0
stderr: !=
